chore(deps): Suppress RUSTSEC-2026-0009
The fix requires an updated version of the `time` crate that would
require us to bump MSRV to Rust 1.88, which I'm unwilling to do since
this vuln isn't actually meaningfully exploitable as this a dep of gix
which only pulls from git repos that the caller explicitly asks for and
are presumably not able to exploit this vuln.

--- a/deny.toml
+++ b/deny.toml
@@ -26,6 +26,10 @@ ignore = [
   # Can't upgrade vergen-gix past 1.0.9 without Rust 1.88 (we're on 1.85.1).
   # Build-dep only, never processes untrusted data at runtime.
   "RUSTSEC-2025-0140",
+  # time < 0.3.47 RFC 2822 parsing stack exhaustion. Fix requires Rust 1.88.
+  # time is pulled in by vergen-gix (build dep) and zip; cgx doesn't parse
+  # user-provided RFC 2822 date strings, so not exploitable in practice.
+  "RUSTSEC-2026-0009",
 ]
 version = 2
 yanked = "warn"
